# colorlines98ai

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  README.md  TODO.md  play_gui.py  requirements.txt  test_ch.py  test_mcts_corruption.py  test_mcts_root.py
alphatrain/: BENCHMARKS.md  HISTORY.md  TODO.md  __init__.py  afterstate.py  batched_engine.py  batched_engine_gpu.py  batched_mcts.py  batched_mcts_closed.py  batched_mcts_gpu.py  calibrate_value_colab.ipynb  counterfactual.py  crisis.py  crisis_mining_colab.ipynb  crisis_mining_colab2.ipynb  dataset.py  eval_colab.ipynb  eval_policy_colab.ipynb  evaluate.py  gen_crisis_colab.ipynb  gpu_bench_colab.ipynb  gpu_eval_engine.py  gumbel.py  inference_server.py  mcts.py  mine_crisis_colab_1.ipynb  mine_crisis_colab_2.ipynb  mine_crisis_colab_3.ipynb  model.py  observation.py  oracle_fleet_colab.ipynb  selfplay_colab.ipynb  selfplay_colab2.ipynb  selfplay_colab3.ipynb  selfplay_v12_colab.ipynb  train.py  train_colab.ipynb  train_gumbel.py  train_hybrid.py  train_path_b.py  (+73 more)
docs/: aux_distill_params_for_chatgpt.md  batched_mcts_perf_for_chatgpt.md  batched_mcts_plan.md  crisis_corpus_quality_for_chatgpt.md  crisis_correction_paradox_for_review.md  crisis_distill_review_for_gemini.md  crisis_fork_review_for_chatgpt.md  distill_paradox_for_review.md  (+20 more)
rust_engine/: Cargo.toml
rust_engine/src/: board.rs  features.rs  game.rs  heuristic.rs  lib.rs  main.rs  python.rs  rng.rs  tournament.rs
rust_engine/tests/: test_fixtures.rs  test_full_game_parity.rs  test_game_replay.rs  test_rng_parity.rs  test_tournament_golden.rs
(+265 files in other folders)
