[package]
name = "colorlines98"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
python = ["pyo3", "numpy"]

[[bin]]
name = "colorlines98"
path = "src/main.rs"

[lib]
name = "colorlines98"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
